versioned_docs/version-1.16/actions/add-date-time-picker.md
---
id: add-date-time-picker
title: Add Date Time Picker
sidebar_label: Add Date Time Picker
---


This action will add a Date Time Picker to the specified dynamic container.

## Parameter Reference
| Parameter | Description | Supports Tokens | Default |
| -- | -- | -- | -- |
| Container Id | This is the Container Id to place this hidden field into. Eg. Add a Dynamic Field Container having id DynamicFieldContainer. "DynamicFieldContainer" is the ID of the field. Supports My Tokens. | Yes | None |
| Field Id | Required. Give this field an id so you can reference it later. Supports My Tokens. | Yes | None |
| Field Description | Give this field a description. Supports My Tokens. | Yes | None |
| Field Title | Give this field an title/name which is a label. Supports My Tokens. | Yes | None |
| Initial Value | Provide a date for preload. Hint: When initializing from Run SQL Query Action you need to use the new tokens that are generated by the action for date/datetime/datetime2/datetimeoffset columns: [&lt;column&gt;:ISO], [&lt;column&gt;:ISODate] or [&lt;column&gt;:ISOAsUtc]. More info in the Run SQL Query action help text. Supports My Tokens. | Yes | None |
| Client Format | The format that will be displayed to the user.Date/DateTime picker format strings or Time picker format strings. Supports My Tokens. | Yes | None |
| Picker Type |  | No | dateandtime |
| Disable Dates | Disable every date in the future or every date in the past. | No | none |
| First Day of the Week |  | No | sunday |
| Disable Weekends | Check this to disable saturdays and sundays. | No | false |
| Inline | Displays the calendar inline. | No | false |
| Timepicker 24 hour mode | Displays time picker in 24 hour mode without AM/PM selection when enabled. | No | false |
| Minimum Date | The minimum date that a user can start picking from (inclusive). Format: yyyy-MM-dd. Supports My Tokens. | Yes | None |
| Maximum Date | The maximum date that a user can pick to (inclusive). Format: yyyy-MM-dd. Supports My Tokens. | Yes | None |
| Minimum Time | The minimum time that a user can start picking from (inclusive). Format: HH:mm. Supports My Tokens. | Yes | None |
| Maximum Time | The maximum time that a user can pick to (inclusive). Format: HH:mm. Supports My Tokens. | Yes | None |
| Minute Increment | Adjusts the step for the minute input (incl. scrolling). Defaults to 5. | No | 5 |
| Bind Expression - Show | Dynamically show or hide this field. This must be a boolean expression. Use standard javascript boolean operators (==, !=, &#x3C;,&#x3E; , !). For example, use [PaymentMethod] == &#x27;CreditCard&#x27; to show the credit card field only when the Payment Method is set accordingly. Supports My Tokens. | Yes | None |
| Bind Expression - Value | Dynamically compute the value of this field. So when other fields change this fields updates automatically. Use standard javascript operators where needed (+, -, *, /). For example, use [FirstName] &#x27; &#x27; [LastName] to automatically fill the Display Name field. Note that once the value is edited manually, the automatic synchronization stops. Supports My Tokens. | Yes | None |
| Bind Expression - On Change/Click | Bind some javascript code to execute when the value in this field changes or when a button is clicked. Access the form fields by using syntax [FieldId] which maps to the js object form.fields.FieldId.value. For buttons, you can &#x22;return false;&#x22; to prevent the form from submitting. Supports My Tokens. | Yes | None |
| Tokenize Bind Expressions? | Check this box in order to tokenize the Bind Expressions fields. This is useful when you dynamically compute the id values so you need to tokenize and obtain the real IDs first. | No | None |
| Field ID Token Name | Similarly to normal fields, the ID is the name/inputted id sanitized. This means that if you dynamically generate id's, they might contain spaces or other invalid characters. For this, we output the sanitized id of the field. Give a name to this token which holds the sanitized ID. | No | None |
