versioned_docs/version-1.27/actions/add-date-time-picker.md
---
id: add-date-time-picker
title: Add Date Time Picker
sidebar_label: Add Date Time Picker
---


This action will add a Date Time Picker to the specified dynamic container.

## Parameter Reference
| Parameter | Description | Supports Tokens | Default |
| -- | -- | -- | -- |
| Container Id | This is the Container Id to place this hidden field into. Eg. Add a Dynamic Field Container having id DynamicFieldContainer. "DynamicFieldContainer" is the ID of the field. Supports Tokens. | No | None |
| Field Id | Required. Give this field an id so you can reference it later. Supports Tokens. | No | None |
| Field Description | Give this field a description. Supports Tokens. | No | None |
| Field Title | Give this field an title/name which is a label. Supports Tokens. | No | None |
| Enable Conditionally | This boolean expression is used to determine if this field will be enabled (accepting input) in the form. If specified, this field overrides the Enabled flag below. It supports C# syntax. A common example [SomeField] == "Some Value" or [SomeField].IndexOf("something") == 0.. This field supports Tokens. | No | None |
| Initial Value | Provide a date for preload. Hint: When initializing from Run SQL Query Action you need to use the new tokens that are generated by the action for date/datetime/datetime2/datetimeoffset columns: [&lt;column&gt;:ISO], [&lt;column&gt;:ISODate] or [&lt;column&gt;:ISOAsUtc]. More info in the Run SQL Query action help text. Supports Tokens. | No | None |
| IsEnabled | Determines if the field will be enabled. Use the Enable Conditionally field if you need it to be a token expression. | No | true |
| Client Format | The format that will be displayed to the user.Date/DateTime picker format strings or Time picker format strings. Supports Tokens. | No | None |
| Allow Input | Allows users to manually input time in the textbox. | No | false |
| Picker Type |  | No | dateandtime |
| Disable Dates | Disable every date in the future or every date in the past. | No | none |
| First Day of the Week |  | No | sunday |
| Disable Weekends | Check this to disable saturdays and sundays. | No | false |
| Inline | Calendar is visible without clicking inside the field. | No | false |
| Allow dates outside constraints range | Show the initial/existing value even if it does not conform to the date range constraints set below. | No | true |
| Timepicker 24 hour mode | Displays time picker in 24 hour mode without AM/PM selection when enabled. | No | false |
| Minimum Date | The minimum date that a user can start picking from (inclusive). Format: yyyy-MM-dd. Supports Tokens. | No | None |
| Maximum Date | The maximum date that a user can pick to (inclusive). Format: yyyy-MM-dd. Supports Tokens. | No | None |
| Minimum Time | The minimum time that a user can start picking from (inclusive). Format: HH:mm. Supports Tokens. | No | None |
| Maximum Time | The maximum time that a user can pick to (inclusive). Format: HH:mm. Supports Tokens. | No | None |
| Minute Increment | Adjusts the step for the minute input (incl. scrolling). Defaults to 5. | No | 5 |
| Flatpickr Options Override (javascript object) | Input a valid javascript object that will override the options of the flatpickr library the field is using behind the scenes. Flatpickr options Example: {weekNumbers: true} Supports Tokens. | No | None |
| Bind Expression - Show | Dynamically show or hide this field. This must be a boolean expression. Use standard javascript boolean operators (==, !=, &#x3C;,&#x3E; , !). For example, use [PaymentMethod] == &#x27;CreditCard&#x27; to show the credit card field only when the Payment Method is set accordingly. Supports Tokens. | No | None |
| Preserve Layout? | Check this box in order to make sure hiding/showing fields will not affect the layout of the form. | No | None |
| Bind Expression - Value | Dynamically compute the value of this field. So when other fields change this fields updates automatically. Use standard javascript operators where needed (+, -, *, /). For example, use [FirstName] &#x27; &#x27; [LastName] to automatically fill the Display Name field. Note that once the value is edited manually, the automatic synchronization stops. Supports Tokens. | No | None |
| Bind Expression - On Change/Click | Bind some javascript code to execute when the value in this field changes or when a button is clicked. Access the form fields by using syntax [FieldId] which maps to the js object form.fields.FieldId.value. For buttons, you can &#x22;return false;&#x22; to prevent the form from submitting. Supports Tokens. | No | None |
| Tokenize Bind Expressions? | Check this box in order to tokenize the Bind Expressions fields. This is useful when you dynamically compute the id values so you need to tokenize and obtain the real IDs first. | No | None |
| Validation Condition | This boolean expression is used to determine if this field validation will execute. It supports C# syntax. A common example is [SomeField] == "Some Value" or [SomeField].IndexOf("something") == 0. This field supports Tokens. Note that the tokenization will take place when you submit the form and you have access to the values of the submitted fields. | No | None |
| Is Required | Specify if this field is required. Supports Tokens. | No | None |
| Tokenize Validators? | Check this box in order to tokenize the Validator fields and the Validation Condition field. This is useful when you need to use tokens for validation at Form Initialization. | No | True |
| CSS Class | Set CSS classes on the input control. This is appended to the container's UI settings! Supports Tokens. | No | None |
| CSS Styles | Set inline styles on the input control. This is appended to the container's UI settings! Supports Tokens. | No | None |
| Label CSS Class | Set CSS classes on the input label. This is appended to the container's UI settings! Supports Tokens. | No | None |
| Label CSS Styles | Set inline styles on the input label. This is appended to the container's UI settings! Supports Tokens. | No | None |
| Field ID Token Name | Similarly to normal fields, the ID is the name/inputted id sanitized. This means that if you dynamically generate id's, they might contain spaces or other invalid characters. For this, we output the sanitized id of the field. Give a name to this token which holds the sanitized ID. | No | None |
